[project]
name = "claude-usage-status"
version = "0.0.0"  # actual version in fetch-usage.py
description = "Claude Usage Status Fetcher - Retrieves usage data from Claude API"
requires-python = ">=3.10"
dependencies = [
    "curl_cffi>=0.14.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
]
